Add 'skeleton' to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,60 @@
   <title>jokenpo</title>
 </head>
 <body>
+  <main id="game">
+    <h1 id="title">Jokenpo!</h1>
+    <div if="board">
+
+      <div id="player">
+          <div id="player_name">
+          </div>
+          <div id="payer_moves">
+            <div id="player_rock">
+              <img id="player_rock_img" src="" alt="rock">
+            </div>
+            <div id="player_paper">
+              <img id="player_paper_img" src="" alt="paper">
+            </div>
+            <div id="player_scissor">
+              <img id="player_scissor_img" src="" alt="scissor">
+            </div>
+          </div>
+          <div id="player_score">
+          </div>
+      </div>
+
+      <div id="versus">
+          <h2>
+            VS
+          </h3>
+      </div>
+
+      <div id="computer">
+          <div id="computer_name">
+          </div>
+          <div id="computer_moves">
+              <div id="computer_rock">
+                <img id="computer_rock_img" src="" alt="rock">
+              </div>
+              <div id="computer_paper">
+                <img id="computer_paper_img" src="" alt="paper">
+              </div>
+              <div id="computer_scissor">
+                <img id="computer_scissor_img" src="" alt="scissor">
+              </div>
+          </div>
+          <div id="computer_score">
+          </div>
+      </div>
+
+    </div>
+
+    <div id="messages">
+      <h4>
+        messages will be displayed here
+      </h6>
+    </div>
+  </main>
   <script src="jokenpo.js"></script>
 </body>
 </html>
