--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>jokenpo</title>
+  <link rel="stylesheet" href="jokenpo.css">
 </head>
 <body>
   <main id="game">
