Add images and Style

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 
       <div id="player" class="game_field_space">
           <div id="player_name">
-            Player
+            YOU
           </div>
           <div id="payer_moves" class='move_options'>
             <div id="player_rock">
-              <img id="player_rock_img" src="" alt="rock">
+              <img id="player_rock_img" src="images/rock.svg" alt="rock">
             </div>
             <div id="player_paper">
-              <img id="player_paper_img" src="" alt="paper">
+              <img id="player_paper_img" src="images/paper.svg" alt="paper">
             </div>
             <div id="player_scissor">
-              <img id="player_scissor_img" src="" alt="scissor">
+              <img id="player_scissor_img" src="images/scissor.svg" alt="scissor">
             </div>
           </div>
           <div id="player_score">
@@ -41,17 +41,17 @@
 
       <div id="computer" class="game_field_space">
           <div id="computer_name">
-            Computer
+            CPU
           </div>
           <div id="computer_moves" class='move_options'>
               <div id="computer_rock">
-                <img id="computer_rock_img" src="" alt="rock">
+                <img id="computer_rock_img" src="images/rock.svg" alt="rock">
               </div>
               <div id="computer_paper">
-                <img id="computer_paper_img" src="" alt="paper">
+                <img id="computer_paper_img" src="images/paper.svg" alt="paper">
               </div>
               <div id="computer_scissor">
-                <img id="computer_scissor_img" src="" alt="scissor">
+                <img id="computer_scissor_img" src="images/scissor.svg" alt="scissor">
               </div>
           </div>
           <div id="computer_score">
