--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
           </div>
           <div id="payer_moves" class='move_options'>
             <div id="player_rock">
-              <img id="player_rock_img" src="images/rock.svg" alt="rock">
+              <img id="player_rock_img" class='choosable' src="images/rock.svg" alt="rock">
             </div>
             <div id="player_paper">
-              <img id="player_paper_img" src="images/paper.svg" alt="paper">
+              <img id="player_paper_img" class='choosable' src="images/paper.svg" alt="paper">
             </div>
             <div id="player_scissor">
-              <img id="player_scissor_img" src="images/scissor.svg" alt="scissor">
+              <img id="player_scissor_img" class='choosable' src="images/scissor.svg" alt="scissor">
             </div>
           </div>
           <div id="player_score">
