Add front_back integration of score view

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <img id="player_scissor_img" class='choosable' src="images/scissor.svg" alt="scissor">
             </div>
           </div>
-          <div id="player_score">
+          <div id="player_score" class="score">
             0
           </div>
       </div>
@@ -54,7 +54,7 @@
                 <img id="computer_scissor_img" src="images/scissor.svg" alt="scissor">
               </div>
           </div>
-          <div id="computer_score">
+          <div id="computer_score"  class="score">
             0
           </div>
       </div>
